<resources>
    <string name="app_name">Chuck Norris Facts</string>
    <string name="chuck_norris_name">Chuck Norris</string>
    <string name="quote_description">Quote</string>
    <string name="search_description">Search</string>
    <string name="share_description">Share</string>
    <string name="update_description">Update</string>
    <string name="chuck_norris_description">I am your father</string>
    <string name="placeholder_fact">Chuck Norris was once so drunk that he tripped and the ejecta that was launched into outer space formed the moon.</string>
    <string name="placeholder_category">UNCATEGORIZED</string>
    <string name="no_network_message">Ocorreu um erro ao recuperar as informações. Verifique sua conexão com a internet. </string>
    <string name="timeout_message">Tempo excedido ao tentar recuperar as informações. </string>
    <string name="unavailable_provider_message">Ocorreu um erro ao conectar com o servidor. Tente novamente mais tarde. </string>
    <string name="unexpected_data_message">Ocorreu um erro ao recuperar as informações. Tente novamente mais tarde.</string>
    <string name="waiting_for_input_message">Digite um termo para a pesquisa.</string>
    <string name="malformed_query_message">Não é possível fazer a pesquisa com este termo de busca. Insira um novo termo e tente novamente</string>
    <string name="query_not_match_message">Nenhum resultado foi encontrado com este termo. Insira um novo termo e tente novamente. </string>
    <string name="retry_button">Retry</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">Ok</string>
    <string name="settings_button">settings</string>
    <string name="send_to">Enviar Para</string>
    <string name="share_with">Compartilhar com</string>
</resources>